@@ -67,6 +67,9 @@ class RGBA:
             return self.r == other.r and self.g == other.g and self.b == other.b and self.a == other.a
         return False
 
+    def __ne__(self, other):
+        return not self.__eq__(other)
+
     def __str__(self):
         return 'RGBA(r:' + str(self.r) + ', g:' + str(self.g) + \
                ', b:' + str(self.b) + ', a:' + str(self.a) + ')'
