@@ -2,10 +2,10 @@
 <nodegroup name="ObjectsNOD.fx">
   <parent file="NormalMapped.xml"/>
   <node name="inputs" type="NodeGroupInput" X="-350" Y="0">
-    <input name="SpecMap" type="NodeSocketColor"/>
-    <input name="SpecMapAlpha" type="NodeSocketFloat"/>
-    <input name="ScrollingMaskTexture" type="NodeSocketColor"/>
-    <input name="ScrollingMaskTextureAlpha" type="NodeSocketFloat"/>
+    <input name="SpecMap" type="NodeSocketTexture"/>
+    <input name="SpecMapAlpha" type="NodeSocketTextureAlpha"/>
+    <input name="ScrollingMaskTexture" type="NodeSocketTexture"/>
+    <input name="ScrollingMaskTextureAlpha" type="NodeSocketTextureAlpha"/>
     <input name="TexCoordTransform_0" type="NodeSocketColor"/>
     <input name="RecolorMultiplier" type="NodeSocketFloat"/>
     <input name="EnvMult" type="NodeSocketFloat"/>
